# SOC-Project

./: .gitignore  Label_Check_Dam.py  Loess_Plateau_Resampled.py  Pipfile  README.md  README_Residual_Sort_R2.md  README_SOC_Data_Flow.md  README_uv.md  Read_htgy_DEM.py  Resample.py  download_ERA5_mean.py  htgy_SOC_model.py  main.py  pyproject.toml  save_htgy_dams_to_csv.py
Processed_Data/: .gitignore  River_Basin_Points.xlsx  River_Basin_Points_Updated.xlsx  Vegetation_Input_v2_with_Lai.csv
Raw_Data/: .gitignore
Residual_Test_Improve_R2/: Summary_Report.md
Residual_Test_R2_061/: Summary_Report.md
htgy/: Extract_Lai.py  Extract_k1_k2.py  Fit_Lai_vegetation_input.py  Loess_Plateau.py  Read_k1_k2.py  Resample.py  Resample_ERA5.py  download_ERA5_mean.py  globals.py  htgy_SOC_model.py  paths.py  save_htgy_dams_to_csv.py
htgy/0Data_visualization/: Loess_Plateau.py  Plot_tp.py  Read_River.py  Read_k1_k2.py  River_and_Basin_Overlap.py  htgy_river_and_basin.py  hygy_River_Basin.py  hygy_River_Basin_94.py  visualize_nc_points.py
htgy/1Data_processing/: Calculate_R_Factor_nc.py  Convert_Parquet_to_csv.py  Extract_Lai.py  Extract_SOC_Lai.py  Extract_k1_k2.py  Label_Check_Dam.py  Read_htgy_DEM.py  Resample.py  Resample_CMIP6.py  Resample_ERA5.py  download_ERA5_mean.py  save_htgy_dams_to_csv.py
htgy/2Regression/: Fit_Lai_vegetation_input.py  (+5 more)
wangmaogou/: C0_k_linear_fitting.py  Fit_exponential_decay_k_c0.py  Fit_ndvi_vegetation_input.py  Fit_precipictation_flowrate.py  Label_Check_Dam_wmg.py  Read_wmg_DEM.py  Reproject_wmg.py  wmg.py  wmg_SOC_model.py  wmg_boarder.py
(+187 files in other folders)
