[project]
name = "soc-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "geopandas>=1.1.1",
    "matplotlib>=3.10.5",
    "netcdf4>=1.7.2",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "rioxarray>=0.19.0",
    "scikit-learn>=1.7.1",
    "scipy>=1.15.3",
    "shapely>=2.1.1",
    "torch>=2.8.0",
    "whitebox>=2.3.6",
    "xarray>=2025.6.1",
]
